syntax = "proto3";

package auth;

service AuthService {
    rpc Registration (RegLogDto) returns (Tokens) {}
    rpc Login (RegLogDto) returns (Tokens) {}
    rpc Logout (LogoutDto) returns (RefreshToken) {}
    rpc Activate (ActivateDto) returns (Empty) {}
    rpc Refresh (RefreshDto) returns (Tokens) {}
}

message RefreshToken {
    string refreshToken = 1;
}

message RefreshDto {
    string refreshToken = 1;
}

message ActivateDto {
    string activationLink = 1;
}

message LogoutDto {
    string refreshToken = 1;
}

message RegLogDto {
    string email = 1;
    string password = 2;
}

message Tokens {
    string accessToken = 1;
    string refreshToken = 2;
}

message Empty {}