syntax = "proto3";

package users;

service UsersService {
    rpc CreateUser (CreateUserDto) returns (User) {}
    rpc GetUsers (Empty) returns (Users) {}
    rpc GetUser (GetUserDto) returns (User) {}
    rpc GetUserByEmail (GetUserByEmailDto) returns (User) {}
    rpc EditUser (EditUserDto) returns (User) {}
    rpc DeleteUser (DeleteUserDto) returns (User) {}
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string role = 5;
    bool isActivated = 6;
    string activationLink = 7;
}

message Users {
    repeated User Users = 1;
}

message GetUserByEmailDto {
    string email = 1;
}

message CreateUserDto {
    string name = 1;
    string email = 2;
    string password = 3;
    string role = 4;
    string activationLink = 5;
}

message EditUserDto {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string role = 5;
    bool isActivated = 6;
    string activationLink = 7;
}

message GetUserDto {
    string id = 1;
}

message DeleteUserDto {
    string id = 1;
}

message Empty {}